k8s/manifests/aks/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress
  namespace: fcg-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: fcg-users-service
                port:
                  number: 80
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: fcg-users-service
                port:
                  number: 80
          - path: /api/v1/games
            pathType: Prefix
            backend:
              service:
                name: fcg-catalog-service
                port:
                  number: 80
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: fcg-payments-service
                port:
                  number: 80
